--- a/clients/android/app/src/main/res/layout/dialog_create_file.xml
+++ b/clients/android/app/src/main/res/layout/dialog_create_file.xml
@@ -80,6 +80,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
-        android:textColor="@color/md_theme_error" />
+        android:textColor="?attr/colorError" />
 
 </LinearLayout>
