core, server, android: implement google play billing (#1115)
* added intermediate upgrade group and (now unused) endpoint

* changing upgrade screen

* changed up billing screen

* added verifying, canceling, and acknowledging a subscription

* implemented cancel and confirm endpoints needed for subscriptions

* added pubsub webhook, although not completely

* added (practically) all of the android ui for billing

* added google play webhook untested

* got rid of error log for unknown stripe decline codes

* handled special cases where a user and webhook are dealing with the billing lock

* more attempts to get subscription testing to work

* little bit of clean up and now retrieve subscription info in android (although not applied)

* can register subscriptions and intermediate clean up

* got rid of pubsub dependency since it is unused and cleaned up its remnants

* fixed webhook token check and added some temporary testing code

* subscribing, renewals, canceling, pausing, and other operations work as expected

* more responsive UI, handled some pubsub situations better and fixed clippy/fmt

* set back api url in android

* removed debugging print and added some logs

* cleanup

* fixed comments and added more tests

* Update server/server/src/config.rs

Co-authored-by: Steve Russo <steverusso@pm.me>

* forgot to switch back route

* moved data cap into subscription history and stopped storing storing a vec of billing infos

* fixed lint

* got rid of credit card test and failing integration test (from lack of keys)

* resolved rest of comments and fixed lint

* got rid of test temporarily due to missed secret

* fmt

* refactors and changes for the sake of consistency, bumped all clients except windows and apple

* fix breaking gtk4 change

* upgrade gtk4 dep to 0.4.8

* added token default in local.env and test.env

* linux subscription info instead of specifically cc info

* oops, fmt

* 

--- a/clients/android/app/src/main/res/layout/preference_usage_bar.xml
+++ b/clients/android/app/src/main/res/layout/preference_usage_bar.xml
@@ -2,24 +2,57 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:paddingHorizontal="20dp">
 
     <ProgressBar
         android:id="@+id/usage_bar"
         style="?android:attr/progressBarStyleHorizontal"
-        android:layout_marginVertical="15dp"
-        android:layout_marginHorizontal="30dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:background="@color/transparent"/>
+        android:layout_marginHorizontal="10dp"
+        android:layout_marginVertical="15dp"
+        android:background="@color/transparent" />
 
     <TextView
         android:id="@+id/usage_info"
-        android:layout_marginBottom="15dp"
-        android:layout_marginHorizontal="20dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/default_value"/>
+        android:layout_marginBottom="15dp"
+        android:text="@string/default_value" />
 
+    <LinearLayout
+        android:id="@+id/premium_info_for_free"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:visibility="gone">
+
+        <TextView
+            android:id="@+id/premium_tier_pitch"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:text="@string/upgrade_pitch"
+            android:textStyle="bold" />
+
+        <ProgressBar
+            android:id="@+id/premium_usage_bar"
+            style="?android:attr/progressBarStyleHorizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginHorizontal="10dp"
+            android:layout_marginTop="10dp"
+            android:background="@color/transparent" />
+
+        <Button
+            android:id="@+id/upgrade_account"
+            style="@style/Main.Button.Borderless.Colored"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingHorizontal="5dp"
+            android:text="@string/update_to_premium" />
+    </LinearLayout>
 </LinearLayout>
