--- a/clients/android/app/src/main/res/layout/fragment_on_boarding_import_account.xml
+++ b/clients/android/app/src/main/res/layout/fragment_on_boarding_import_account.xml
@@ -29,7 +29,7 @@
 
     </com.google.android.material.textfield.TextInputLayout>
 
-    <com.google.android.material.imageview.ShapeableImageView
+    <ImageView
         android:id="@+id/on_boarding_qr_code_import"
         android:layout_width="50dp"
         android:layout_height="50dp"
