--- a/clients/android/app/src/main/res/drawable/ic_baseline_sync_alt_24.xml
+++ b/clients/android/app/src/main/res/drawable/ic_baseline_sync_alt_24.xml
@@ -1,4 +1,4 @@
-<vector android:height="24dp" android:tint="@color/md_theme_secondary"
+<vector android:height="24dp" android:tint="?attr/colorSecondary"
     android:viewportHeight="24" android:viewportWidth="24"
     android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
     <path android:fillColor="@android:color/white" android:pathData="M18,12l4,-4l-4,-4l0,3l-15,0l0,2l15,0z"/>
