--- a/clients/android/app/src/main/res/layout/activity_upgrade_account.xml
+++ b/clients/android/app/src/main/res/layout/activity_upgrade_account.xml
@@ -1,24 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:fitsSystemWindows="true"
-    android:layout_margin="20dp"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:padding="25dp"
+    android:layout_marginTop="20dp">
 
     <ImageView
         android:id="@+id/exit_billing"
         android:layout_width="30dp"
         android:layout_height="30dp"
-        android:src="@drawable/exit"
-        android:contentDescription="@string/exit"
-        android:clickable="true"
-        android:focusable="true"
         android:layout_gravity="end"
-        android:layout_marginTop="15dp"
-        android:layout_marginEnd="15dp"/>
+        android:layout_marginTop="25dp"
+        android:layout_marginEnd="15dp"
+        android:contentDescription="@string/exit"
+        android:src="@drawable/exit"
+        android:background="?android:selectableItemBackgroundBorderless" />
 
     <com.google.android.material.textview.MaterialTextView
         android:layout_width="wrap_content"
