--- a/clients/android/app/src/main/res/layout/fragment_text_editor.xml
+++ b/clients/android/app/src/main/res/layout/fragment_text_editor.xml
@@ -114,6 +114,7 @@
             android:id="@+id/markdown_viewer"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textIsSelectable="true"
             android:gravity="top|start" />
 
     </ScrollView>
