--- a/clients/android/app/src/main/res/layout/fragment_files_list.xml
+++ b/clients/android/app/src/main/res/layout/fragment_files_list.xml
@@ -1,142 +1,161 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/fragment_list_files"
+    android:id="@+id/drawerLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true">
+    xmlns:tools="http://schemas.android.com/tools"
 
-    <com.google.android.material.appbar.AppBarLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:liftOnScroll="true"
-        app:liftOnScrollTargetViewId="@id/files_list">
+    tools:openDrawer="start">
 
-        <com.google.android.material.appbar.MaterialToolbar
-            android:id="@+id/files_toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="?android:actionBarSize"
-            app:menu="@menu/menu_files_list"
-            app:title="@string/lockbook_title"
-            app:layout_scrollFlags="scroll|enterAlways|snap" />
-
-        <app.lockbook.ui.BreadCrumbView
-            android:id="@+id/files_breadcrumb_bar"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:text_size="15"
-            app:arrow_drawable="@drawable/ic_baseline_keyboard_arrow_right_24" />
-
-    </com.google.android.material.appbar.AppBarLayout>
-
-    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
-        android:id="@+id/list_files_refresh"
+    <androidx.coordinatorlayout.widget.CoordinatorLayout
+        android:id="@+id/fragment_list_files"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:animateLayoutChanges="true"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior">
+        android:fitsSystemWindows="true">
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/files_list"
+        <com.google.android.material.appbar.AppBarLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:liftOnScroll="true"
+            app:liftOnScrollTargetViewId="@id/files_list">
+
+            <com.google.android.material.appbar.MaterialToolbar
+                android:id="@+id/files_toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="?android:actionBarSize"
+                app:layout_scrollFlags="scroll|enterAlways|snap"
+                app:navigationIcon="@drawable/ic_outline_menu_24"
+                app:menu="@menu/menu_files_list"
+                app:title="@string/lockbook_title" />
+
+            <app.lockbook.ui.BreadCrumbView
+                android:id="@+id/files_breadcrumb_bar"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:arrow_drawable="@drawable/ic_baseline_keyboard_arrow_right_24"
+                app:text_size="15" />
+
+        </com.google.android.material.appbar.AppBarLayout>
+
+        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+            android:id="@+id/list_files_refresh"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:scrollbars="vertical" />
+            android:animateLayoutChanges="true"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/files_list"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:scrollbars="vertical" />
 
-    <LinearLayout
-        android:id="@+id/files_empty_folder"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:gravity="center"
-        android:orientation="vertical"
-        android:visibility="gone">
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ic_outline_insert_drive_file_240"
-            android:contentDescription="@string/empty_folder" />
-
-        <com.google.android.material.textview.MaterialTextView
-            android:layout_width="200dp"
-            android:layout_height="wrap_content"
-            android:text="@string/empty_folder"
-            android:gravity="center"
-            app:layout_anchorGravity="center"/>
-
-    </LinearLayout>
-
-    <com.leinardi.android.speeddial.SpeedDialOverlayLayout
-        android:id="@+id/fab_overlay"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_gravity="fill"
-        android:fitsSystemWindows="true" />
-
-    <com.leinardi.android.speeddial.SpeedDialView
-        android:id="@+id/fab_speed_dial"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        app:sdMainFabOpenedBackgroundColor="?attr/colorSecondaryContainer"
-        app:sdMainFabOpenedIconColor="?attr/colorOnSecondaryContainer"
-        app:sdMainFabClosedBackgroundColor="?attr/colorPrimary"
-        app:sdMainFabClosedIconColor="?attr/colorOnPrimary"
-        app:sdExpansionMode="top"
-        app:sdOverlayLayout="@id/fab_overlay"
-        app:sdMainFabAnimationRotateAngle="90"
-        app:sdMainFabClosedSrc="@drawable/ic_baseline_add_24"
-        app:sdMainFabOpenedSrc="@drawable/ic_baseline_add_24" />
-
-    <com.google.android.material.card.MaterialCardView
-        android:id="@+id/sync_holder"
-        android:layout_width="220dp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|start"
-        android:layout_margin="20dp"
-        android:visibility="gone"
-        android:animateLayoutChanges="true">
+        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:padding="5dp"
-            android:orientation="vertical">
+            android:id="@+id/files_empty_folder"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:orientation="vertical"
+            android:visibility="gone">
 
-            <com.google.android.material.progressindicator.LinearProgressIndicator
-                android:id="@+id/sync_progress_indicator"
-                android:layout_width="match_parent"
+            <ImageView
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:padding="5dp" />
+                android:contentDescription="@string/empty_folder"
+                android:src="@drawable/ic_outline_insert_drive_file_240" />
 
-            <LinearLayout
-                android:layout_width="match_parent"
+            <com.google.android.material.textview.MaterialTextView
+                android:layout_width="200dp"
                 android:layout_height="wrap_content"
-                android:padding="5dp"
-                android:animateLayoutChanges="true" >
-
-                <ImageView
-                    android:id="@+id/sync_check"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/ic_outline_check_circle_24"
-                    android:contentDescription="@string/sync_finished"
-                    android:visibility="gone"
-                    android:paddingHorizontal="15dp"/>
-
-                <com.google.android.material.textview.MaterialTextView
-                    android:id="@+id/sync_text"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:maxLines="1"
-                    android:ellipsize="end" />
-
-            </LinearLayout>
+                android:gravity="center"
+                android:text="@string/empty_folder"
+                app:layout_anchorGravity="center" />
 
         </LinearLayout>
 
-    </com.google.android.material.card.MaterialCardView>
+        <com.leinardi.android.speeddial.SpeedDialOverlayLayout
+            android:id="@+id/fab_overlay"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="fill"
+            android:fitsSystemWindows="true" />
 
-</androidx.coordinatorlayout.widget.CoordinatorLayout>
+        <com.leinardi.android.speeddial.SpeedDialView
+            android:id="@+id/fab_speed_dial"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|end"
+            app:sdExpansionMode="top"
+            app:sdMainFabAnimationRotateAngle="90"
+            app:sdMainFabClosedBackgroundColor="?attr/colorPrimary"
+            app:sdMainFabClosedIconColor="?attr/colorOnPrimary"
+            app:sdMainFabClosedSrc="@drawable/ic_baseline_add_24"
+            app:sdMainFabOpenedBackgroundColor="?attr/colorSecondaryContainer"
+            app:sdMainFabOpenedIconColor="?attr/colorOnSecondaryContainer"
+            app:sdMainFabOpenedSrc="@drawable/ic_baseline_add_24"
+            app:sdOverlayLayout="@id/fab_overlay" />
+
+        <com.google.android.material.card.MaterialCardView
+            android:id="@+id/sync_holder"
+            android:layout_width="220dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|start"
+            android:layout_margin="20dp"
+            android:animateLayoutChanges="true"
+            android:visibility="gone">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:padding="5dp">
+
+                <com.google.android.material.progressindicator.LinearProgressIndicator
+                    android:id="@+id/sync_progress_indicator"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:padding="5dp" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:animateLayoutChanges="true"
+                    android:padding="5dp">
+
+                    <ImageView
+                        android:id="@+id/sync_check"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:contentDescription="@string/sync_finished"
+                        android:paddingHorizontal="15dp"
+                        android:src="@drawable/ic_outline_check_circle_24"
+                        android:visibility="gone" />
+
+                    <com.google.android.material.textview.MaterialTextView
+                        android:id="@+id/sync_text"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:ellipsize="end"
+                        android:maxLines="1" />
+
+                </LinearLayout>
+
+            </LinearLayout>
+
+        </com.google.android.material.card.MaterialCardView>
+
+    </androidx.coordinatorlayout.widget.CoordinatorLayout>
+
+    <com.google.android.material.navigation.NavigationView
+        android:id="@+id/navigationView"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        app:headerLayout="@layout/header_navigation_drawer_files_list"
+        app:menu="@menu/menu_files_list_drawer"/>
+
+</androidx.drawerlayout.widget.DrawerLayout>
