--- a/clients/android/app/src/main/res/layout/header_navigation_drawer_files_list.xml
+++ b/clients/android/app/src/main/res/layout/header_navigation_drawer_files_list.xml
@@ -8,26 +8,47 @@
     android:fitsSystemWindows="true"
     android:orientation="vertical">
 
-    <com.google.android.material.textview.MaterialTextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textAppearance="?attr/textAppearanceTitleLarge"
-        android:paddingBottom="20dp"
-        android:text="Current Usage"/>
-
     <app.futured.donut.DonutProgressView
-        android:id="@+id/files_list_usage_donut"
+        android:id="@+id/filesListUsageDonut"
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:layout_marginStart="40dp"
-        app:donut_gapAngle="320"
+        app:donut_gapWidth="0"
         app:donut_strokeWidth="8dp"/>
 
     <com.google.android.material.textview.MaterialTextView
-        android:id="@+id/files_list_usage"
+        android:id="@+id/filesListUsage"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingTop="20dp"
+        android:paddingVertical="20dp"
+        android:freezesText="true"
         android:textAppearance="?attr/textAppearanceLabelLarge" />
+
+    <com.google.android.material.textview.MaterialTextView
+        android:id="@+id/filesListLastSynced"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:paddingTop="10dp"
+        android:text="@string/default_value"
+        android:freezesText="true"
+        android:textAppearance="?attr/textAppearanceLabelMedium" />
+
+    <com.google.android.material.textview.MaterialTextView
+        android:id="@+id/filesListLocalDirty"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:paddingTop="10dp"
+        android:text="@string/default_value"
+        android:freezesText="true"
+        android:textAppearance="?attr/textAppearanceLabelMedium" />
+
+    <com.google.android.material.textview.MaterialTextView
+        android:id="@+id/filesListServerDirty"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:paddingTop="10dp"
+        android:text="@string/default_value"
+        android:freezesText="true"
+        android:textAppearance="?attr/textAppearanceLabelMedium" />
 
 </LinearLayout>
