--- a/clients/android/app/src/main/res/layout/document_file_item.xml
+++ b/clients/android/app/src/main/res/layout/document_file_item.xml
@@ -2,21 +2,21 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/linear_file_item_holder"
+    android:id="@+id/document_item_holder"
+    android:foreground="?attr/selectableItemBackground"
     android:clickable="true"
     android:focusable="true"
     android:clipToPadding="false"
     android:orientation="horizontal"
     android:paddingStart="?android:listPreferredItemPaddingStart"
     android:paddingEnd="?android:listPreferredItemPaddingEnd"
-    android:paddingVertical="8dp">
+    android:paddingVertical="10dp">
 
     <ImageView
-        android:id="@+id/linear_file_icon"
+        android:id="@+id/document_icon"
         android:layout_width="30dp"
         android:layout_height="50dp"
-        android:layout_marginEnd="10dp"
+        android:layout_marginEnd="30dp"
         android:contentDescription="@string/file_image_content_description" />
 
     <LinearLayout
@@ -24,23 +24,22 @@
         android:layout_height="match_parent"
         android:layout_weight="1"
         android:gravity="center_vertical"
-        android:orientation="vertical"
-        android:paddingHorizontal="10dp">
+        android:orientation="vertical">
 
         <com.google.android.material.textview.MaterialTextView
-            android:id="@+id/linear_file_name"
-            style="@style/TextAppearance.Material3.LabelLarge"
+            android:id="@+id/document_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textAppearance="?attr/textAppearanceTitleSmall"
             android:layout_marginBottom="5dp"
             android:ellipsize="end"
             android:maxLines="1" />
 
         <com.google.android.material.textview.MaterialTextView
-            android:id="@+id/linear_file_description"
-            style="@style/TextAppearance.Material3.BodySmall"
+            android:id="@+id/document_description"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:textAppearance="?attr/textAppearanceLabelMedium" />
 
     </LinearLayout>
 
