--- a/clients/android/app/src/main/res/layout/document_file_item.xml
+++ b/clients/android/app/src/main/res/layout/document_file_item.xml
@@ -35,11 +35,28 @@
             android:ellipsize="end"
             android:maxLines="1" />
 
-        <com.google.android.material.textview.MaterialTextView
-            android:id="@+id/document_description"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textAppearance="?attr/textAppearanceLabelMedium" />
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/document_needs_to_be_pushed"
+                android:layout_width="15dp"
+                android:layout_height="15dp"
+                android:layout_marginEnd="5dp"
+                android:visibility="gone"
+                android:src="@drawable/ic_outline_cloud_upload_24"
+                android:contentDescription="@string/needs_to_be_pushed" />
+
+            <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/document_description"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textAppearance="?attr/textAppearanceLabelMedium" />
+
+        </LinearLayout>
+
 
     </LinearLayout>
 
