--- a/clients/android/app/src/main/res/layout/folder_file_item.xml
+++ b/clients/android/app/src/main/res/layout/folder_file_item.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:id="@+id/folder_item_holder"
@@ -19,14 +20,37 @@
         android:layout_marginEnd="30dp"
         android:contentDescription="@string/file_image_content_description" />
 
-    <com.google.android.material.textview.MaterialTextView
-        android:id="@+id/folder_name"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:layout_gravity="center_vertical"
-        android:ellipsize="end"
-        android:textAppearance="?attr/textAppearanceTitleSmall"
-        android:maxLines="1" />
+        android:layout_height="match_parent"
+        android:layout_weight="1" >
+
+        <com.google.android.material.textview.MaterialTextView
+            android:id="@+id/folder_name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:ellipsize="end"
+            android:maxLines="1"
+            android:textAppearance="?attr/textAppearanceTitleSmall"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <ImageView
+            android:id="@+id/folder_needs_to_be_pushed"
+            android:layout_width="15dp"
+            android:layout_height="15dp"
+            android:layout_marginTop="5dp"
+            android:src="@drawable/ic_outline_cloud_upload_24"
+            android:visibility="gone"
+            app:layout_constraintStart_toStartOf="@+id/folder_name"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/folder_name"
+            android:contentDescription="@string/needs_to_be_pushed" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
 
 </LinearLayout>
