--- a/clients/android/app/src/main/res/layout/folder_file_item.xml
+++ b/clients/android/app/src/main/res/layout/folder_file_item.xml
@@ -1,56 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="70dp"
     android:id="@+id/folder_item_holder"
     android:foreground="?attr/selectableItemBackground"
     android:clickable="true"
     android:focusable="true"
-    android:clipToPadding="false"
-    android:orientation="horizontal"
     android:paddingStart="?android:listPreferredItemPaddingStart"
-    android:paddingEnd="?android:listPreferredItemPaddingEnd"
-    android:paddingVertical="10dp">
+    android:paddingEnd="?android:listPreferredItemPaddingEnd">
 
     <ImageView
         android:id="@+id/folder_icon"
         android:layout_width="30dp"
-        android:layout_height="50dp"
-        android:layout_marginEnd="30dp"
-        android:contentDescription="@string/file_image_content_description" />
+        android:layout_height="45dp"
+        android:contentDescription="@string/file_image_content_description"
+        android:src="@drawable/ic_baseline_folder_24"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <ImageView
+        android:id="@+id/folder_action_icon"
+        android:layout_width="17dp"
+        android:layout_height="17dp"
+        android:contentDescription="@string/needs_to_be_pushed"
+        app:layout_constraintBottom_toBottomOf="@+id/folder_icon"
+        app:layout_constraintEnd_toEndOf="@+id/folder_icon" />
+
+    <com.google.android.material.textview.MaterialTextView
+        android:id="@+id/folder_name"
+        android:layout_height="wrap_content"
         android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_weight="1" >
+        android:layout_gravity="center_vertical"
+        android:layout_marginStart="20dp"
+        android:ellipsize="end"
+        android:maxLines="1"
+        android:textAppearance="?attr/textAppearanceTitleSmall"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/folder_icon"
+        app:layout_constraintTop_toTopOf="parent" />
 
-        <com.google.android.material.textview.MaterialTextView
-            android:id="@+id/folder_name"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:ellipsize="end"
-            android:maxLines="1"
-            android:textAppearance="?attr/textAppearanceTitleSmall"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <ImageView
-            android:id="@+id/folder_needs_to_be_pushed"
-            android:layout_width="15dp"
-            android:layout_height="15dp"
-            android:layout_marginTop="5dp"
-            android:src="@drawable/ic_outline_cloud_upload_24"
-            android:visibility="gone"
-            app:layout_constraintStart_toStartOf="@+id/folder_name"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/folder_name"
-            android:contentDescription="@string/needs_to_be_pushed" />
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
