--- a/clients/android/app/src/main/res/layout/document_file_item.xml
+++ b/clients/android/app/src/main/res/layout/document_file_item.xml
@@ -9,13 +9,14 @@
     android:clickable="true"
     android:focusable="true"
     android:paddingStart="?android:listPreferredItemPaddingStart"
-    android:paddingEnd="?android:listPreferredItemPaddingEnd">
+    android:paddingEnd="?android:listPreferredItemPaddingEnd"
+    tools:ignore="UnusedAttribute">
 
     <ImageView
         android:id="@+id/document_icon"
         android:layout_width="30dp"
         android:layout_height="45dp"
-        android:contentDescription="@string/file_image_content_description"
+        android:contentDescription="@string/document"
         android:src="@drawable/ic_outline_insert_drive_file_24"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -25,8 +26,7 @@
         android:id="@+id/document_action_icon"
         android:layout_width="17dp"
         android:layout_height="17dp"
-        android:contentDescription="@string/needs_to_be_pushed"
-        android:src="@drawable/ic_baseline_check_circle_24"
+        android:contentDescription="@string/document_action"
         app:layout_constraintBottom_toBottomOf="@+id/document_icon"
         app:layout_constraintEnd_toEndOf="@+id/document_icon" />
 
