--- a/clients/android/app/src/main/res/layout/move_file_item.xml
+++ b/clients/android/app/src/main/res/layout/move_file_item.xml
@@ -16,7 +16,7 @@
         android:layout_width="30dp"
         android:layout_height="50dp"
         android:layout_marginEnd="10dp"
-        android:contentDescription="@string/file_image_content_description" />
+        android:contentDescription="@string/file" />
 
     <com.google.android.material.textview.MaterialTextView
         android:id="@+id/linear_move_file_name"
