--- a/clients/android/app/src/main/res/layout/layout_recent_files.xml
+++ b/clients/android/app/src/main/res/layout/layout_recent_files.xml
@@ -1,22 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    app:layout_scrollFlags="scroll|enterAlways|snap"
     android:orientation="vertical">
 
     <com.google.android.material.textview.MaterialTextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="8dp"
-        android:textAppearance="?attr/textAppearanceTitleLarge"
-        android:text="@string/recent_documents"/>
+        android:paddingHorizontal="15dp"
+        android:paddingBottom="15dp"
+        android:text="@string/recent_documents"
+        android:textAppearance="?attr/textAppearanceTitleMedium" />
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recent_files_list"
         android:layout_width="match_parent"
-        android:layout_height="140dp"
+        android:layout_height="wrap_content"
         android:paddingHorizontal="20dp"
-        android:paddingBottom="10dp"/>
+        android:paddingBottom="10dp" />
 
 </LinearLayout>
