--- a/clients/android/app/src/main/res/layout/recent_file_item.xml
+++ b/clients/android/app/src/main/res/layout/recent_file_item.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="130dp"
     android:layout_height="130dp"
+    style="@style/Widget.Material3.CardView.Filled"
     android:layout_marginHorizontal="8dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
