--- a/clients/android/app/src/main/res/layout/fragment_text_editor.xml
+++ b/clients/android/app/src/main/res/layout/fragment_text_editor.xml
@@ -31,6 +31,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
+            android:minWidth="900sp"
             android:maxWidth="900sp"
             android:gravity="top|start"
             android:hint="@string/text_editor_hint"
@@ -116,6 +117,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
+            android:minWidth="900sp"
             android:maxWidth="900sp"
             android:textIsSelectable="true"
             android:gravity="top|start" />
