--- a/clients/android/app/src/main/res/layout/fragment_search_documents.xml
+++ b/clients/android/app/src/main/res/layout/fragment_search_documents.xml
@@ -20,9 +20,11 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginEnd="20dp"
+            android:imeOptions="flagNoExtractUi"
             android:focusable="true"
             android:focusableInTouchMode="true"
             app:iconifiedByDefault="false" />
+
 
     </com.google.android.material.appbar.MaterialToolbar>
 
