intermediate work for share file fragment

--- a/clients/android/app/src/main/res/layout/dialog_file_info.xml
+++ b/clients/android/app/src/main/res/layout/dialog_file_info.xml
@@ -6,6 +6,8 @@
     android:paddingHorizontal="30dp"
     android:paddingVertical="10dp">
 
+<!--    add who has access to this file -->
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
