--- a/clients/android/app/src/main/res/layout/fragment_create_link.xml
+++ b/clients/android/app/src/main/res/layout/fragment_create_link.xml
@@ -29,17 +29,23 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:background="?attr/colorPrimaryContainer"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:padding="10dp"
+        android:padding="15dp"
         app:layout_constraintStart_toStartOf="parent">
+
+        <com.google.android.material.divider.MaterialDivider
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="12dp"
+            app:dividerInsetStart="8dp"
+            app:dividerInsetEnd="8dp"/>
 
         <com.google.android.material.textview.MaterialTextView
             android:id="@+id/create_link_file_for"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textAppearance="?attr/textAppearanceBody1"
+            android:textAppearance="?attr/textAppearanceSubtitle1"
             android:layout_marginBottom="5dp"
             android:text="@string/create_link_file_for"/>
 
